// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamRuleForm should render an empty StreamRuleForm 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      aria-hidden="true"
      role="dialog"
    >
      <div
        class="fade modal-backdrop in"
      />
      <div
        class="fade Modal-nuree8-0 eNmkew in modal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              class="modal-header"
            >
              <button
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h4
                class="modal-title"
              >
                Bach
              </h4>
            </div>
            <form
              data-testid="modal-form"
              id="StreamRuleForm"
            >
              <div
                class="modal-body"
              >
                <div
                  class="container-fluid"
                >
                  <div>
                    <div
                      class="col-md-8"
                    >
                      <div />
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Type"
                        >
                          Type
                        </label>
                        <span>
                          <select
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            data-testid="rule-type-selection"
                            id="Type"
                            label="Type"
                            name="type"
                            placeholder=""
                            required=""
                            type="select"
                          >
                            <option
                              value="1"
                            >
                              match exactly
                            </option>
                            <option
                              value="2"
                            >
                              match regular expression
                            </option>
                            <option
                              value="3"
                            >
                              greater than
                            </option>
                            <option
                              value="4"
                            >
                              smaller than
                            </option>
                            <option
                              value="5"
                            >
                              field presence
                            </option>
                            <option
                              value="6"
                            >
                              contain
                            </option>
                            <option
                              value="7"
                            >
                              always match
                            </option>
                            <option
                              value="8"
                            >
                              match input
                            </option>
                          </select>
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Value"
                        >
                          Value
                        </label>
                        <span>
                          <input
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            id="Value"
                            label="Value"
                            name="value"
                            placeholder=""
                            required=""
                            type="text"
                            value=""
                          />
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <span>
                          <div
                            class="checkbox"
                          >
                            <label
                              title=""
                            >
                              <input
                                label="Inverted"
                                name="inverted"
                                placeholder=""
                                type="checkbox"
                                value=""
                              />
                              Inverted
                            </label>
                          </div>
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Description"
                        >
                          Description (optional)
                        </label>
                        <span>
                          <textarea
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            id="Description"
                            label="Description (optional)"
                            name="description"
                            placeholder=""
                            type="textarea"
                          />
                          
                        </span>
                      </div>
                      <p>
                        <strong>
                          Result:
                        </strong>
                         
                        <span>
                          <em>
                            &lt;empty&gt;
                          </em>
                           
                          <strong>
                            must 
                          </strong>
                          match exactly
                           
                          <em>
                            &lt;empty&gt;
                          </em>
                        </span>
                      </p>
                    </div>
                    <div
                      class="col-md-4"
                    >
                      <div
                        class="Well-sc-19gs1oc-0 eWEWxV matcher-github well well-sm"
                      >
                        The server will try to convert to strings or numbers based on the matcher type as well as it can.
                        <br />
                        <br />
                        <div />
                         
                        <a
                          href="https://github.com/Graylog2/graylog2-server/tree/MAJOR_AND_MINOR_VERSION_MOCK/graylog2-server/src/main/java/org/graylog2/streams/matchers"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                           Take a look at the matcher code on GitHub
                        </a>
                        <br />
                        <br />
                        Regular expressions use Java syntax. 
                        <a
                          href="https://docs.graylog.org/en/MAJOR_AND_MINOR_VERSION_MOCK/pages/streams.html"
                          target="_blank"
                          title="More information"
                        >
                          <div />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-footer"
              >
                <button
                  class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-primary"
                  type="submit"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StreamRuleForm should render an simple StreamRuleForm 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      aria-hidden="true"
      role="dialog"
    >
      <div
        class="fade modal-backdrop in"
      />
      <div
        class="fade Modal-nuree8-0 eNmkew in modal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              class="modal-header"
            >
              <button
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h4
                class="modal-title"
              >
                Bach
              </h4>
            </div>
            <form
              data-testid="modal-form"
              id="StreamRuleForm"
            >
              <div
                class="modal-body"
              >
                <div
                  class="container-fluid"
                >
                  <div>
                    <div
                      class="col-md-8"
                    >
                      <div>
                        field_1
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Type"
                        >
                          Type
                        </label>
                        <span>
                          <select
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            data-testid="rule-type-selection"
                            id="Type"
                            label="Type"
                            name="type"
                            placeholder=""
                            required=""
                            type="select"
                          >
                            <option
                              value="1"
                            >
                              match exactly
                            </option>
                            <option
                              value="2"
                            >
                              match regular expression
                            </option>
                            <option
                              value="3"
                            >
                              greater than
                            </option>
                            <option
                              value="4"
                            >
                              smaller than
                            </option>
                            <option
                              value="5"
                            >
                              field presence
                            </option>
                            <option
                              value="6"
                            >
                              contain
                            </option>
                            <option
                              value="7"
                            >
                              always match
                            </option>
                            <option
                              value="8"
                            >
                              match input
                            </option>
                          </select>
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Value"
                        >
                          Value
                        </label>
                        <span>
                          <input
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            id="Value"
                            label="Value"
                            name="value"
                            placeholder=""
                            required=""
                            type="text"
                            value="value_1"
                          />
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <span>
                          <div
                            class="checkbox"
                          >
                            <label
                              title=""
                            >
                              <input
                                label="Inverted"
                                name="inverted"
                                placeholder=""
                                type="checkbox"
                                value=""
                              />
                              Inverted
                            </label>
                          </div>
                          
                        </span>
                      </div>
                      <div
                        class="FormGroup__StyledFormGroup-sc-1wv4cm9-0 gcTkZc form-group"
                      >
                        <label
                          class="ControlLabel-sc-1edmum5-0 hCskeX control-label"
                          for="Description"
                        >
                          Description (optional)
                        </label>
                        <span>
                          <textarea
                            class="FormControl-sc-1amoaox-0 eXfwDC form-control"
                            id="Description"
                            label="Description (optional)"
                            name="description"
                            placeholder=""
                            type="textarea"
                          >
                            description
                          </textarea>
                          
                        </span>
                      </div>
                      <p>
                        <strong>
                          Result:
                        </strong>
                         
                        <span>
                          <em>
                            field_1
                          </em>
                           
                          <strong>
                            must 
                          </strong>
                          match exactly
                           
                          <em>
                            value_1
                          </em>
                        </span>
                      </p>
                    </div>
                    <div
                      class="col-md-4"
                    >
                      <div
                        class="Well-sc-19gs1oc-0 eWEWxV matcher-github well well-sm"
                      >
                        The server will try to convert to strings or numbers based on the matcher type as well as it can.
                        <br />
                        <br />
                        <div />
                         
                        <a
                          href="https://github.com/Graylog2/graylog2-server/tree/MAJOR_AND_MINOR_VERSION_MOCK/graylog2-server/src/main/java/org/graylog2/streams/matchers"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                           Take a look at the matcher code on GitHub
                        </a>
                        <br />
                        <br />
                        Regular expressions use Java syntax. 
                        <a
                          href="https://docs.graylog.org/en/MAJOR_AND_MINOR_VERSION_MOCK/pages/streams.html"
                          target="_blank"
                          title="More information"
                        >
                          <div />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-footer"
              >
                <button
                  class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-default"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="Button__StyledButton-c9cbmb-0 jVYrA btn btn-primary"
                  type="submit"
                >
                  Save
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
